# aldi-hoc

./: .gitignore  README.md  file_structure.txt  pyproject.toml  requirements.txt
aldi_hoc_companion/: __init__.py
aldi_hoc_companion/agent/: __init__.py  prompts.py  qa_agent.py
aldi_hoc_companion/app/: __init__.py  main.py
aldi_hoc_companion/app/static/: index.html
aldi_hoc_companion/core/: ai_models.py  config.py  logging.py
aldi_hoc_companion/db/: __init__.py  db.py
aldi_hoc_companion/models/: __init__.py  agent_models.py  app_models.py  logging_models.py
tests/: test_config.py  test_db_connection.py  test_queries.py
