[project]
name = "aldi-rag-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.34.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
include = ["aldi_hoc_companion*"]
